--- a/ScadeSuiteWeb.Client/wwwroot/index.html
+++ b/ScadeSuiteWeb.Client/wwwroot/index.html
@@ -13,6 +13,7 @@
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
     <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
+    <link rel="icon" type="image/png" href="images/math/Plus.png" />
     <loading-theme storage-name="theme"></loading-theme>
 </head>
 
