更改使用z diagram 渲染画布

--- a/ScadeSuiteWeb.Client/wwwroot/index.html
+++ b/ScadeSuiteWeb.Client/wwwroot/index.html
@@ -17,29 +17,26 @@
     <loading-theme storage-name="theme"></loading-theme>
 
     <!-- 加载第三方 antv x6 库 -->
-
     <!-- Load the main X6 library -->
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6"></script>
-
+    <!--<script  src="https://cdn.jsdelivr.net/npm/@antv/x6"></script>-->
     <!-- Load the X6 selection plugin -->
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-selection"></script>
-
+    <!--<script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-selection"></script>-->
     <!-- Load the X6 scroller plugin -->
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-scroller"></script>
-
+    <!--<script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-scroller"></script>-->
     <!-- Load the X6 snapline plugin -->
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-snapline"></script>
-
-
+    <!--<script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-snapline"></script>-->
     <!-- Load the X6 minimap plugin -->
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-minimap"></script>
-
+    <!--<script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-minimap"></script>-->
     <!-- Load the X6 minimap plugin -->
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-dnd"></script>
+    <!--<script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-dnd"></script>
 
     <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-common"></script>
 
-    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-keyboard"></script>
+    <script  src="https://cdn.jsdelivr.net/npm/@antv/x6-plugin-keyboard"></script>-->
+
+    <link href="_content/Z.Blazor.Diagrams/style.min.css" rel="stylesheet" />
+    <!-- If you want the default style -->
+    <link href="_content/Z.Blazor.Diagrams/default.styles.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -57,7 +54,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script type="module" src="app.js"></script>
+    <!--<script type="module" src="app.js"></script>-->
+    <script src="_content/Z.Blazor.Diagrams/script.min.js"></script>
 </body>
 
 </html>
